@@ -85,8 +85,11 @@ import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.driver.MacroOption.EnabledOption;
 import com.oracle.svm.driver.MacroOption.MacroOptionKind;
 import com.oracle.svm.driver.MacroOption.Registry;
+import com.oracle.svm.util.ModuleSupport;
 
 public class NativeImage {
+
+    private static final String DEFAULT_GENERATOR_CLASS_NAME = "com.oracle.svm.hosted.NativeImageGeneratorRunner";
 
     static final boolean IS_AOT = Boolean.getBoolean("com.oracle.graalvm.isaot");
 
@@ -210,10 +213,24 @@ public class NativeImage {
 
     public interface BuildConfiguration {
         /**
+         * @return the name of the image generator main class.
+         */
+        default String getGeneratorMainClass() {
+            return DEFAULT_GENERATOR_CLASS_NAME;
+        }
+
+        /**
          * @return relative path usage get resolved against this path (also default path for image
          *         building)
          */
         Path getWorkingDirectory();
+
+        /**
+         * @return java.home that is associated with this BuildConfiguration
+         */
+        default Path getJavaHome() {
+            throw VMError.unimplemented();
+        }
 
         /**
          * @return path to Java executable
@@ -368,19 +385,25 @@ public class NativeImage {
         default boolean buildFallbackImage() {
             return false;
         }
+
+        default String getAgentJAR() {
+            return null;
+        }
     }
 
     private static class DefaultBuildConfiguration implements BuildConfiguration {
         private final Path workDir;
         private final Path rootDir;
         private final List<String> args;
+        private final String generatorClassName;
 
-        DefaultBuildConfiguration(List<String> args) {
-            this(null, null, args);
+        DefaultBuildConfiguration(String generatorClassName, List<String> args) {
+            this(generatorClassName, null, null, args);
         }
 
         @SuppressWarnings("deprecation")
-        DefaultBuildConfiguration(Path rootDir, Path workDir, List<String> args) {
+        DefaultBuildConfiguration(String generatorClassName, Path rootDir, Path workDir, List<String> args) {
+            this.generatorClassName = generatorClassName;
             this.args = args;
             this.workDir = workDir != null ? workDir : Paths.get(".").toAbsolutePath().normalize();
             if (rootDir != null) {
@@ -410,8 +433,18 @@ public class NativeImage {
         }
 
         @Override
+        public String getGeneratorMainClass() {
+            return generatorClassName;
+        }
+
+        @Override
         public Path getWorkingDirectory() {
             return workDir;
+        }
+
+        @Override
+        public Path getJavaHome() {
+            return useJavaModules() ? rootDir : rootDir.getParent();
         }
 
         @Override
@@ -425,11 +458,14 @@ public class NativeImage {
             if (javaHome == null) {
                 throw showError("Environment variable JAVA_HOME is not set");
             }
-            Path javaHomePath = Paths.get(javaHome);
-            if (!Files.isExecutable(javaHomePath.resolve(binJava))) {
+            Path javaHomeDir = Paths.get(javaHome);
+            if (!Files.isDirectory(javaHomeDir)) {
+                throw showError("Environment variable JAVA_HOME does not refer to a directory");
+            }
+            if (!Files.isExecutable(javaHomeDir.resolve(binJava))) {
                 throw showError("Environment variable JAVA_HOME does not refer to a directory with a " + binJava + " executable");
             }
-            return javaHomePath.resolve(binJava);
+            return javaHomeDir.resolve(binJava);
         }
 
         @Override
@@ -507,6 +543,12 @@ public class NativeImage {
             buildArgs.addAll(args);
             return buildArgs;
         }
+
+        @Override
+        public String getAgentJAR() {
+            return rootDir.resolve(Paths.get("lib", "svm", "builder", "svm.jar")).toAbsolutePath().toString();
+        }
+
     }
 
     private ArrayList<String> createFallbackBuildArgs() {
@@ -667,11 +709,15 @@ public class NativeImage {
             String modulePath = config.getBuilderModulePath().stream()
                             .map(p -> canonicalize(p).toString())
                             .collect(Collectors.joining(File.pathSeparator));
-            addImageBuilderJavaArgs(Arrays.asList("--module-path", modulePath));
+            if (!modulePath.isEmpty()) {
+                addImageBuilderJavaArgs(Arrays.asList("--module-path", modulePath));
+            }
             String upgradeModulePath = config.getBuilderUpgradeModulePath().stream()
                             .map(p -> canonicalize(p).toString())
                             .collect(Collectors.joining(File.pathSeparator));
-            addImageBuilderJavaArgs(Arrays.asList("--upgrade-module-path", upgradeModulePath));
+            if (!upgradeModulePath.isEmpty()) {
+                addImageBuilderJavaArgs(Arrays.asList("--upgrade-module-path", upgradeModulePath));
+            }
         } else {
             config.getBuilderJVMCIClasspath().forEach((Consumer<? super Path>) this::addImageBuilderClasspath);
             if (!config.getBuilderJVMCIClasspathAppend().isEmpty()) {
@@ -705,7 +751,8 @@ public class NativeImage {
             addImageBuilderJavaArgs(oXmx + memRequirements);
         }
 
-        consolidateListArgs(imageBuilderJavaArgs, "-Dpolyglot.engine.PreinitializeContexts=", ",", Function.identity());
+        consolidateListArgs(imageBuilderJavaArgs, "-Dpolyglot.engine.PreinitializeContexts=", ",", Function.identity()); // legacy
+        consolidateListArgs(imageBuilderJavaArgs, "-Dpolyglot.image-build-time.PreinitializeContexts=", ",", Function.identity());
     }
 
     protected static String consolidateSingleValueArg(Collection<String> args, String argPrefix) {
@@ -794,7 +841,7 @@ public class NativeImage {
                 if (classpathEntry.endsWith(ClasspathUtils.cpWildcardSubstitute)) {
                     try {
                         jarFileMatches = Files.list(classpathEntry.getParent())
-                                        .filter(p -> p.getFileName().toString().toLowerCase().endsWith(".jar"))
+                                        .filter(ClasspathUtils::isJar)
                                         .collect(Collectors.toList());
                     } catch (NoSuchFileException e) {
                         /* Fallthrough */
@@ -843,7 +890,7 @@ public class NativeImage {
                             String optionArgKey = componentDirectory.subpath(2, nameCount).toString();
                             optionArg = propertyFileSubstitutionValues.get(optionArgKey);
                         }
-                        return resolvePropertyValue(str, optionArg, componentDirectory.toString());
+                        return resolvePropertyValue(str, optionArg, componentDirectory, config);
                     };
                     showVerboseMessage(isVerbose(), "Apply " + nativeImageMetaInfFile.toUri());
                     try {
@@ -874,10 +921,24 @@ public class NativeImage {
         args.apply(true);
     }
 
-    static boolean processManifestMainAttributes(Path jarFilePath, BiConsumer<Path, Attributes> manifestConsumer) {
-        if (Files.isDirectory(jarFilePath)) {
-            return false;
+    static void processManifestMainAttributes(Path path, BiConsumer<Path, Attributes> manifestConsumer) {
+        if (path.endsWith(ClasspathUtils.cpWildcardSubstitute)) {
+            if (!Files.isDirectory(path.getParent())) {
+                throw NativeImage.showError("Cannot expand wildcard: '" + path + "' is not a directory");
+            }
+            try {
+                Files.list(path.getParent())
+                                .filter(ClasspathUtils::isJar)
+                                .forEach(p -> processJarManifestMainAttributes(p, manifestConsumer));
+            } catch (IOException e) {
+                throw NativeImage.showError("Error while expanding wildcard for '" + path + "'", e);
+            }
+        } else if (!Files.isDirectory(path)) {
+            processJarManifestMainAttributes(path, manifestConsumer);
         }
+    }
+
+    static boolean processJarManifestMainAttributes(Path jarFilePath, BiConsumer<Path, Attributes> manifestConsumer) {
         try (JarFile jarFile = new JarFile(jarFilePath.toFile())) {
             Manifest manifest = jarFile.getManifest();
             if (manifest == null) {
@@ -947,6 +1008,11 @@ public class NativeImage {
         Long xmsValue = consolidateArgs(imageBuilderJavaArgs, oXms, SubstrateOptionsParser::parseLong, String::valueOf, () -> SubstrateOptionsParser.parseLong(getXmsValue()), Math::max);
         if (Long.compareUnsigned(xmsValue, xmxValue) > 0) {
             replaceArg(imageBuilderJavaArgs, oXms, Long.toUnsignedString(xmxValue));
+        }
+
+        /* Enable class initializaiton tracing agent. */
+        if (traceClassInitialization()) {
+            imageBuilderJavaArgs.add("-javaagent:" + config.getAgentJAR());
         }
 
         /* After JavaArgs consolidation add the user provided JavaArgs */
@@ -1048,6 +1114,17 @@ public class NativeImage {
         return buildImage(imageBuilderJavaArgs, imageBuilderBootClasspath, imageBuilderClasspath, imageBuilderArgs, finalImageClasspath);
     }
 
+    private boolean traceClassInitialization() {
+        String lastTracelArgument = null;
+        for (String imageBuilderArg : imageBuilderArgs) {
+            if (imageBuilderArg.contains("TraceClassInitialization")) {
+                lastTracelArgument = imageBuilderArg;
+            }
+        }
+
+        return "-H:+TraceClassInitialization".equals(lastTracelArgument);
+    }
+
     private String mainClass;
     private String imageName;
     private Path imagePath;
@@ -1069,8 +1146,9 @@ public class NativeImage {
         if (!bcp.isEmpty()) {
             command.add(bcp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator, "-Xbootclasspath/a:", "")));
         }
+
         command.addAll(Arrays.asList("-cp", cp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator))));
-        command.add("com.oracle.svm.hosted.NativeImageGeneratorRunner");
+        command.add(config.getGeneratorMainClass());
         if (IS_AOT && OS.getCurrent().hasProcFS) {
             /*
              * GR-8254: Ensure image-building VM shuts down even if native-image dies unexpected
@@ -1100,8 +1178,12 @@ public class NativeImage {
 
     private static final Function<BuildConfiguration, NativeImage> defaultNativeImageProvider = config -> IS_AOT ? NativeImageServer.create(config) : new NativeImage(config);
 
+    private static void main(String[] args, String generatorClassName) {
+        performBuild(new DefaultBuildConfiguration(generatorClassName, Arrays.asList(args)), defaultNativeImageProvider);
+    }
+
     public static void main(String[] args) {
-        performBuild(new DefaultBuildConfiguration(Arrays.asList(args)), defaultNativeImageProvider);
+        main(args, DEFAULT_GENERATOR_CLASS_NAME);
     }
 
     public static void build(BuildConfiguration config) {
@@ -1109,7 +1191,7 @@ public class NativeImage {
     }
 
     public static void agentBuild(Path javaHome, Path workDir, List<String> buildArgs) {
-        performBuild(new DefaultBuildConfiguration(javaHome, workDir, buildArgs), NativeImage::new);
+        performBuild(new DefaultBuildConfiguration(DEFAULT_GENERATOR_CLASS_NAME, javaHome, workDir, buildArgs), NativeImage::new);
     }
 
     public static Map<Path, List<String>> extractEmbeddedImageArgs(Path workDir, String[] imageClasspath) {
@@ -1511,7 +1593,7 @@ public class NativeImage {
         propertyFileSubstitutionValues.put(key, value);
     }
 
-    static String resolvePropertyValue(String val, String optionArg, String componentDirectory) {
+    static String resolvePropertyValue(String val, String optionArg, Path componentDirectory, BuildConfiguration config) {
         String resultVal = val;
         if (optionArg != null) {
             /* Substitute ${*} -> optionArg in resultVal (always possible) */
@@ -1532,7 +1614,9 @@ public class NativeImage {
             }
         }
         /* Substitute ${.} -> absolute path to optionDirectory */
-        resultVal = safeSubstitution(resultVal, "${.}", componentDirectory);
+        resultVal = safeSubstitution(resultVal, "${.}", componentDirectory.toString());
+        /* Substitute ${java.home} -> to java.home of BuildConfiguration */
+        resultVal = safeSubstitution(resultVal, "${java.home}", config.getJavaHome().toString());
         return resultVal;
     }
 
@@ -1562,6 +1646,28 @@ public class NativeImage {
                 showMessage("Could not recursively delete path: " + toDelete);
                 e.printStackTrace();
             }
+        }
+    }
+
+    /**
+     * Command line entry point when running on JDK9+. This is required to dynamically export Graal
+     * to SVM and it requires {@code --add-exports=java.base/jdk.internal.module=ALL-UNNAMED} to be
+     * on the VM command line.
+     *
+     * Note: This is a workaround until GR-16855 is resolved.
+     */
+    public static class JDK9Plus {
+
+        // Must be distinct from NativeImage.IS_AOT since the module
+        // exporting must be executed prior to NativeImage being loaded.
+        private static final boolean IS_AOT = Boolean.getBoolean("com.oracle.graalvm.isaot");
+
+        public static void main(String[] args) {
+            if (!IS_AOT) {
+                ModuleSupport.exportAndOpenAllPackagesToUnnamed("jdk.internal.vm.compiler", false);
+                ModuleSupport.exportAndOpenAllPackagesToUnnamed("com.oracle.graal.graal_enterprise", true);
+            }
+            NativeImage.main(args, DEFAULT_GENERATOR_CLASS_NAME + "$JDK9Plus");
         }
     }
 }
